# CCGOnlinePublic

./: .gitignore  README.txt  README_Build.txt  README_Install.txt  README_sqlserver.txt
CCGOnline/: CLRTools.sln  CMakeLists.txt
CCGOnline/CCGOnline/: CCGOnline.sln  CLRTools.sln  CMakeLists.txt  setup_external.py
CCGOnline/CCGOnline/AuthServer/: AuthServer.cpp  AuthServer.vcxproj  AuthServer.vcxproj.filters  stdafx.cpp  stdafx.h
CCGOnline/CCGOnline/CCGOClient/: CCGOClient.cpp  CCGOClient.h  CCGOClient.rc  CCGOClient.vcxproj  CCGOClient.vcxproj.filters  Resource.h  stdafx.cpp  stdafx.h  targetver.h
CCGOnline/CCGOnline/EnumReflector/: EnumReflector.csproj
CCGOnline/CCGOnline/Grammars/: EnumReflector.g
CCGOnline/CCGOnline/IPCodeGen/: IPCodeGen.csproj
CCGOnline/CCGOnline/IPCoreTest/: CMakeLists.txt
CCGOnline/CCGOnline/IPDatabase/: CMakeLists.txt  CompoundDatabaseTaskBatch.h  DatabaseCallContext.h  DatabaseCalls.cpp  DatabaseCalls.h  DatabaseProcessBase.cpp  DatabaseProcessBase.h  DatabaseProcessMessages.cpp  DatabaseProcessMessages.h  DatabaseTaskBatch.h  DatabaseTaskBatchUtilities.cpp  DatabaseTaskBatchUtilities.h  DatabaseTypes.h  EmptyVariableSet.h  IPDatabase.cpp  IPDatabase.h  IPDatabase.vcxproj  IPDatabase.vcxproj.filters  stdafx.h
CCGOnline/CCGOnline/IPDatabaseTest/: IPDatabaseTest.cpp  IPDatabaseTest.vcxproj  IPDatabaseTest.vcxproj.filters  ODBCFailureTests.cpp  ODBCMiscTests.cpp  ODBCShared.h  ODBCSuccessTests.cpp  stdafx.h
CCGOnline/CCGOnline/IPPlatform/: DebugAssert.cpp  DebugAssert.h  EnumUtils.h  IPPlatform.vcxproj  IPPlatform.vcxproj.filters  MemoryAllocation.cpp  MemoryAllocation.h  PlatformExceptionHandler.cpp  PlatformExceptionHandler.h  PlatformFileSystem.cpp  PlatformFileSystem.h  PlatformMisc.cpp  PlatformMisc.h  PlatformProcess.cpp  PlatformProcess.h  PlatformThread.cpp  PlatformThread.h  PlatformTime.cpp  PlatformTime.h  StringUtils.cpp  StringUtils.h  StructuredExceptionInfo.cpp  StructuredExceptionInfo.h  StructuredExceptionTypes.h  ThreadLocalStorage.cpp  ThreadLocalStorage.h  Universal.h  WindowsWrapper.h  stdafx.h  targetver.h
CCGOnline/CCGOnline/IPPlatformTest/: EnumUtilsTests.cpp  IPPlatformTest.cpp  IPPlatformTest.vcxproj  IPPlatformTest.vcxproj.filters  PlatformFileSystemTests.cpp  PlatformProcessTests.cpp  PlatformTimeTests.cpp  StringUtilsTests.cpp  stdafx.h  targetver.h
CCGOnline/CCGOnline/IPPreBuild/: IPPreBuild.csproj  IPPreBuildPackage.cs  source.extension.vsixmanifest
CCGOnline/CCGOnline/IPServerShared/: IPServerShared.cpp  IPServerShared.h  IPServerShared.vcxproj  IPServerShared.vcxproj.filters  stdafx.cpp  stdafx.h  targetver.h
CCGOnline/CCGOnline/IPShared/: CRC.cpp  CRC.h  CRCValue.h  EnumConversion.cpp  EnumConversion.h  IPShared.cpp  IPShared.h  IPShared.vcxproj  IPShared.vcxproj.filters  PriorityQueue.h  SharedXMLSerializerRegistration.cpp  SharedXMLSerializerRegistration.h  StructuredExceptionHandler.cpp  StructuredExceptionHandler.h  TypeInfoUtils.h  stdafx.h  targetver.h
CCGOnline/CCGOnline/IPSharedTest/: CMakeLists.txt  ConcurrencyManagerTests.cpp  ConcurrentQueueTests.cpp  EnumConversionTests.cpp  ExceptionHandlingTests.cpp  IPSharedTest.cpp  IPSharedTest.vcxproj  IPSharedTest.vcxproj.filters  LoggingTests.cpp  PriorityQueueTests.cpp  ProcessMailboxTests.cpp  ProcessMessageFrameTests.cpp  ProcessMessageHandlerTests.cpp  ProcessPropertiesTests.cpp  ProcessTests.cpp  ReflectionTests.cpp  ReflectionTests.h  SharedTestProcessSubject.h  SlashCommandTests.cpp  TaskSchedulerTests.cpp  TimeTests.cpp  XMLLoadableTests.cpp  XMLLoadableTests.h  stdafx.h
CCGOnline/CCGOnline/IP_Database/: CompoundDatabaseTaskBatch.h  DatabaseCalls.h  DatabaseProcessBase.cpp  DatabaseProcessMessages.h  DatabaseTaskBatch.h  DatabaseTaskBatchUtilities.h  EmptyVariableSet.h  IP_Database.cpp  IP_Database.vcxproj  IP_Database.vcxproj.filters
CCGOnline/CCGOnline/IP_DatabaseTest/: IP_DatabaseTest.cpp  IP_DatabaseTest.vcxproj  IP_DatabaseTest.vcxproj.filters  ODBCFailureTests.cpp  ODBCMiscTests.cpp  ODBCShared.h  ODBCSuccessTests.cpp
CCGOnline/CCGOnline/IP_Platform/: IP_Platform.vcxproj  PlatformTypes.h  StringUtils.h  StructuredExceptionTypes.h  WindowsWrapper.h
CCGOnline/CCGOnline/IP_PlatformTest/: IP_PlatformTest.vcxproj  IP_PlatformTest.vcxproj.filters  PlatformFileSystemTests.cpp  PlatformProcessTests.cpp  PlatformTimeTests.cpp  StringUtilsTests.cpp  stdafx.cpp
CCGOnline/CCGOnline/IP_ServerShared/: IP_ServerShared.cpp  IP_ServerShared.h  IP_ServerShared.vcxproj  IP_ServerShared.vcxproj.filters  stdafx.cpp  targetver.h
CCGOnline/CCGOnline/IP_Shared/: IP_Shared.cpp  IP_Shared.vcxproj  IP_Shared.vcxproj.filters  PriorityQueue.h  SharedXMLSerializerRegistration.cpp  StructuredExceptionHandler.cpp  StructuredExceptionHandler.h  TypeInfoUtils.h  stdafx.cpp
CCGOnline/CCGOnline/IP_SharedTest/: ConcurrencyManagerTests.cpp  ExceptionHandlingTests.cpp  IP_SharedTest.cpp  IP_SharedTest.vcxproj  IP_SharedTest.vcxproj.filters  LoggingTests.cpp  PriorityQueueTests.cpp  ProcessMailboxTests.cpp  ProcessMessageFrameTests.cpp  ProcessMessageHandlerTests.cpp  ProcessPropertiesTests.cpp  ProcessTests.cpp  ReflectionTests.cpp  SharedTestProcessSubject.h  SlashCommandTests.cpp  TaskSchedulerTests.cpp  XMLLoadableTests.cpp  XMLLoadableTests.h  stdafx.cpp  stdafx.h  targetver.h
CCGOnline/CCGOnline/PackageManager/: PackageManager.csproj
CCGOnline/CCGOnline/Platform/: DebugAssert.cpp  DebugAssert.h  MemoryAllocation.cpp  MemoryAllocation.h  Platform.vcxproj  Platform.vcxproj.filters  PlatformExceptionHandler.cpp  PlatformExceptionHandler.h  (+23 more)
CCGOnline/DB/: Login.sql  SampleDBSettings.txt
CCGOnline/EnumReflector/: EnumReflector.csproj
CCGOnline/IPCore/: CMakeLists.txt
CCGOnline/IPDatabaseTest/: CMakeLists.txt
CCGOnline/IPPreBuild/: Guids.cs  IPPreBuildPackage.cs  Key.snk  Resources.Designer.cs  VSPackage.resx
CCGOnline/IPShared/: CMakeLists.txt
CCGOnline/Macros/: EnvironmentEvents.vb
CCGOnline/cmake/: compiler_options.cmake  copy_macros.cmake  gtest.cmake  loki.cmake  platform_detection.cmake  tbb.cmake
CCGOnline/pugixml/: CMakeLists.txt
(+785 files in other folders)
