cmake_minimum_required(VERSION 2.8)
project(IPCore)

if(PLATFORM_WINDOWS)
	set(PLATFORM_DIRECTORY Windows)
elseif(PLATFORM_LINUX)
	set(PLATFORM_DIRECTORY Linux)
endif()

file(GLOB IPCORE_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPCore/*.h")
file(GLOB IPCORE_DEBUG_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPCore/Debug/*.h")
file(GLOB IPCORE_FILE_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPCore/File/*.h")
file(GLOB IPCORE_MEMORY_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPCore/Memory/*.h")
file(GLOB IPCORE_MEMORY_STL_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPCore/Memory/Stl/*.h")
file(GLOB IPCORE_PLATFORM_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPCore/Platform/${PLATFORM_DIRECTORY}/*.h")
file(GLOB IPCORE_PROCESS_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPCore/Process/*.h")
file(GLOB IPCORE_SYSTEM_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPCore/System/*.h")
file(GLOB IPCORE_UTILS_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPCore/Utils/*.h")

file(GLOB IPCORE_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
file(GLOB IPCORE_DEBUG_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/Debug/*.cpp")
file(GLOB IPCORE_MEMORY_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/Memory/*.cpp")
file(GLOB IPCORE_PLATFORM_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/${PLATFORM_DIRECTORY}/*.cpp")
file(GLOB IPCORE_SYSTEM_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/System/*.cpp")
file(GLOB IPCORE_UTILS_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/Utils/*.cpp")

file(GLOB IPCORE_BUILD_SOURCE
	${IPCORE_HEADERS}
	${IPCORE_DEBUG_HEADERS}
	${IPCORE_FILE_HEADERS}
	${IPCORE_MEMORY_HEADERS}
	${IPCORE_MEMORY_STL_HEADERS}
	${IPCORE_PLATFORM_HEADERS}
	${IPCORE_PROCESS_HEADERS}
	${IPCORE_SYSTEM_HEADERS}
	${IPCORE_UTILS_HEADERS}
	${IPCORE_SOURCE}
	${IPCORE_DEBUG_SOURCE}
	${IPCORE_MEMORY_SOURCE}
	${IPCORE_PLATFORM_SOURCE}
	${IPCORE_SYSTEM_SOURCE}
	${IPCORE_UTILS_SOURCE}
) 

if(MSVC)
	source_group("include\\IPCore" FILES ${IPCORE_HEADERS})
	source_group("include\\IPCore\\Debug" FILES ${IPCORE_DEBUG_HEADERS})
	source_group("include\\IPCore\\File" FILES ${IPCORE_FILE_HEADERS})
	source_group("include\\IPCore\\Memory" FILES ${IPCORE_MEMORY_HEADERS})
	source_group("include\\IPCore\\Memory\\Stl" FILES ${IPCORE_MEMORY_STL_HEADERS})
	source_group("include\\IPCore\\Platform\\${PLATFORM_DIRECTORY}" FILES ${IPCORE_PLATFORM_HEADERS})
	source_group("include\\IPCore\\Process" FILES ${IPCORE_PROCESS_HEADERS})
	source_group("include\\IPCore\\System" FILES ${IPCORE_SYSTEM_HEADERS})
	source_group("include\\IPCore\\Utils" FILES ${IPCORE_UTILS_HEADERS})

	source_group("src" FILES ${IPCORE_SOURCE})
	source_group("src\\Debug" FILES ${IPCORE_DEBUG_SOURCE})
	source_group("src\\Memory" FILES ${IPCORE_MEMORY_SOURCE})
	source_group("src\\Platform\\${PLATFORM_DIRECTORY}" FILES ${IPCORE_PLATFORM_SOURCE})
	source_group("src\\System" FILES ${IPCORE_SYSTEM_SOURCE})
	source_group("src\\Utils" FILES ${IPCORE_UTILS_SOURCE})
endif(MSVC)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)

add_library(IPCore ${LIBTYPE} ${IPCORE_BUILD_SOURCE})

target_include_directories(IPCore PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:include>)
#target_link_libraries(IPCore ${PLATFORM_DEP_LIBS} ${CLIENT_LIBS} ${CRYPTO_LIBS})
#target_compile_definitions(IPCore PUBLIC -DJSON_USE_EXCEPTION=0)

