cmake_minimum_required(VERSION 2.8)
project(IPShared)

file(GLOB IPSHARED_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPShared/*.h")
file(GLOB IPSHARED_CONCURRENCY_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPShared/Concurrency/*.h")
file(GLOB IPSHARED_CONCURRENCY_CONTAINERS_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPShared/Concurrency/Containers/*.h")
file(GLOB IPSHARED_CONCURRENCY_MESSAGING_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPShared/Concurrency/Messaging/*.h")
file(GLOB IPSHARED_GENERATEDCODE_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPShared/GeneratedCode/*.h")
file(GLOB IPSHARED_LOGGING_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPShared/Logging/*.h")
file(GLOB IPSHARED_MESSAGEHANDLING_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPShared/MessageHandling/*.h")
file(GLOB IPSHARED_SERIALIZATION_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPShared/Serialization/*.h")
file(GLOB IPSHARED_SERIALIZATION_XML_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPShared/Serialization/XML/*.h")
file(GLOB IPSHARED_SLASHCOMMANDS_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPShared/SlashCommands/*.h")
file(GLOB IPSHARED_TASKSCHEDULER_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPShared/TaskScheduler/*.h")
file(GLOB IPSHARED_TIME_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPShared/Time/*.h")

file(GLOB IPSHARED_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
file(GLOB IPSHARED_CONCURRENCY_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/Concurrency/*.cpp")
file(GLOB IPSHARED_CONCURRENCY_MESSAGING_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/Concurrency/Messaging/*.cpp")
file(GLOB IPSHARED_GENERATEDCODE_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/GeneratedCode/*.cpp")
file(GLOB IPSHARED_LOGGING_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/Logging/*.cpp")
file(GLOB IPSHARED_SERIALIZATION_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/Serialization/*.cpp")
file(GLOB IPSHARED_SERIALIZATION_XML_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/Serialization/XML/*.cpp")
file(GLOB IPSHARED_SLASHCOMMANDS_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/SlashCommands/*.cpp")
file(GLOB IPSHARED_TASKSCHEDULER_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/TaskScheduler/*.cpp")
file(GLOB IPSHARED_TIME_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/Time/*.cpp")


file(GLOB IPSHARED_LIBRARY_SOURCE
	${IPSHARED_HEADERS}
	${IPSHARED_CONCURRENCY_HEADERS}
	${IPSHARED_CONCURRENCY_CONTAINERS_HEADERS}
	${IPSHARED_CONCURRENCY_MESSAGING_HEADERS}
	${IPSHARED_GENERATEDCODE_HEADERS}
	${IPSHARED_LOGGING_HEADERS}
	${IPSHARED_MESSAGEHANDLING_HEADERS}
	${IPSHARED_SERIALIZATION_HEADERS}
	${IPSHARED_SERIALIZATION_XML_HEADERS}
	${IPSHARED_SLASHCOMMANDS_HEADERS}
	${IPSHARED_TASKSCHEDULER_HEADERS}
	${IPSHARED_TIME_HEADERS}

	${IPSHARED_SOURCE}
	${IPSHARED_CONCURRENCY_SOURCE}
	${IPSHARED_CONCURRENCY_MESSAGING_SOURCE}
	${IPSHARED_GENERATEDCODE_SOURCE}
	${IPSHARED_LOGGING_SOURCE}
	${IPSHARED_SERIALIZATION_SOURCE}
	${IPSHARED_SERIALIZATION_XML_SOURCE}
	${IPSHARED_SLASHCOMMANDS_SOURCE}
	${IPSHARED_TASKSCHEDULER_SOURCE}
	${IPSHARED_TIME_SOURCE}
) 

if(MSVC)
	source_group("include\\IPShared" FILES ${IPSHARED_HEADERS})
	source_group("include\\IPShared\\Concurrency" FILES ${IPSHARED_CONCURRENCY_HEADERS})
	source_group("include\\IPShared\\Concurrency\\Containers" FILES ${IPSHARED_CONCURRENCY_CONTAINERS_HEADERS})
	source_group("include\\IPShared\\Concurrency\\Messaging" FILES ${IPSHARED_CONCURRENCY_MESSAGING_HEADERS})
	source_group("include\\IPShared\\GeneratedCode" FILES ${IPSHARED_GENERATEDCODE_HEADERS})
	source_group("include\\IPShared\\Logging" FILES ${IPSHARED_LOGGING_HEADERS})
	source_group("include\\IPShared\\MessageHandling" FILES ${IPSHARED_MESSAGEHANDLING_HEADERS})
	source_group("include\\IPShared\\Serialization" FILES ${IPSHARED_SERIALIZATION_HEADERS})
	source_group("include\\IPShared\\Serialization\\XML" FILES ${IPSHARED_SERIALIZATION_XML_HEADERS})
	source_group("include\\IPShared\\SlashCommands" FILES ${IPSHARED_SLASHCOMMANDS_HEADERS})
	source_group("include\\IPShared\\TaskScheduler" FILES ${IPSHARED_TASKSCHEDULER_HEADERS})
	source_group("include\\IPShared\\Time" FILES ${IPSHARED_TIME_HEADERS})

	source_group("src" FILES ${IPSHARED_SOURCE})
	source_group("src\\Concurrency" FILES ${IPSHARED_CONCURRENCY_SOURCE})
	source_group("src\\Concurrency\\Messaging" FILES ${IPSHARED_CONCURRENCY_MESSAGING_SOURCE})
	source_group("src\\GeneratedCode" FILES ${IPSHARED_GENERATEDCODE_SOURCE})
	source_group("src\\Logging" FILES ${IPSHARED_LOGGING_SOURCE})
	source_group("src\\Serialization" FILES ${IPSHARED_SERIALIZATION_SOURCE})
	source_group("src\\Serialization\\XML" FILES ${IPSHARED_SERIALIZATION_XML_SOURCE})
	source_group("src\\SlashCommands" FILES ${IPSHARED_SLASHCOMMANDS_SOURCE})
	source_group("src\\TaskScheduler" FILES ${IPSHARED_TASKSCHEDULER_SOURCE})
	source_group("src\\Time" FILES ${IPSHARED_TIME_SOURCE})
endif(MSVC)

include_directories(${LOKI_INCLUDES_PATH} ${TBB_INCLUDES_PATH} ${CCGONLINE_ROOT}/IPCore/include ${CMAKE_CURRENT_SOURCE_DIR}/include ${CCGONLINE_ROOT}/pugixml/include)

if(PLATFORM_WINDOWS AND MSVC AND BUILD_SHARED_LIBS) 
    add_definitions("-DIPSHARED_EXPORTS=1")
endif()

add_library(IPShared ${LIBTYPE} ${IPSHARED_LIBRARY_SOURCE})
target_link_libraries(IPShared IPCore pugixml)

# todo: decide if install should set up binary directories or library form
install (TARGETS IPShared ARCHIVE DESTINATION ${ARCHIVE_DIRECTORY}/${PLATFORM_INSTALL_BINARY_PREFIX}/\${CMAKE_INSTALL_CONFIG_NAME}
                          LIBRARY DESTINATION lib/${PLATFORM_INSTALL_BINARY_PREFIX}/\${CMAKE_INSTALL_CONFIG_NAME}
				              RUNTIME DESTINATION bin/${PLATFORM_INSTALL_BINARY_PREFIX}/\${CMAKE_INSTALL_CONFIG_NAME})

install (FILES ${IPSHARED_HEADERS} DESTINATION include/IPShared)
install (FILES ${IPSHARED_CONCURRENCY_HEADERS} DESTINATION include/IPShared/Concurrency)
install (FILES ${IPSHARED_CONCURRENCY_CONTAINERS_HEADERS} DESTINATION include/IPShared/Concurrency/Containers)
install (FILES ${IPSHARED_CONCURRENCY_MESSAGING_HEADERS} DESTINATION include/IPShared/Concurrency/Messaging)
install (FILES ${IPSHARED_GENERATEDCODE_HEADERS} DESTINATION include/IPShared/GeneratedCode)
install (FILES ${IPSHARED_LOGGING_HEADERS} DESTINATION include/IPShared/Logging)
install (FILES ${IPSHARED_MESSAGEHANDLING_HEADERS} DESTINATION include/IPShared/MessageHandling)
install (FILES ${IPSHARED_SERIALIZATION_HEADERS} DESTINATION include/IPShared/Serialization)
install (FILES ${IPSHARED_SERIALIZATION_XML_HEADERS} DESTINATION include/IPShared/Serialization/XML)
install (FILES ${IPSHARED_SLASHCOMMANDS_HEADERS} DESTINATION include/IPShared/SlashCommands)
install (FILES ${IPSHARED_TASKSCHEDULER_HEADERS} DESTINATION include/IPShared/TaskScheduler)
install (FILES ${IPSHARED_TIME_HEADERS} DESTINATION include/IPShared/Time)




