cmake_minimum_required(VERSION 2.8)
project(IPDatabase)

file(GLOB IPDATABASE_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPDatabase/*.h")
file(GLOB IPDATABASE_GENERATEDCODE_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPDatabase/GeneratedCode/*.h")
file(GLOB IPDATABASE_INTERFACES_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPDatabase/Interfaces/*.h")
file(GLOB IPDATABASE_ODBCIMPLEMENTATION_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/IPDatabase/ODBCImplementation/*.h")

file(GLOB IPDATABASE_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
file(GLOB IPDATABASE_GENERATEDCODE_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/GeneratedCode/*.cpp")
file(GLOB IPDATABASE_ODBCIMPLEMENTATION_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/ODBCImplementation/*.cpp")


file(GLOB IPDATABASE_LIBRARY_SOURCE
	${IPDATABASE_HEADERS}
	${IPDATABASE_GENERATEDCODE_HEADERS}
	${IPDATABASE_INTERFACES_HEADERS}
	${IPDATABASE_ODBCIMPLEMENTATION_HEADERS}

	${IPDATABASE_SOURCE}
	${IPDATABASE_GENERATEDCODE_SOURCE}
	${IPDATABASE_ODBCIMPLEMENTATION_SOURCE}
) 

if(MSVC)
	source_group("include\\IPDatabase" FILES ${IPDATABASE_HEADERS})
	source_group("include\\IPDatabase\\GeneratedCode" FILES ${IPDATABASE_GENERATEDCODE_HEADERS})
	source_group("include\\IPDatabase\\Interfaces" FILES ${IPDATABASE_INTERFACES_HEADERS})
	source_group("include\\IPDatabase\\ODBCImplementation" FILES ${IPDATABASE_ODBCIMPLEMENTATION_HEADERS})

	source_group("src" FILES ${IPDATABASE_SOURCE})
	source_group("src\\GeneratedCode" FILES ${IPDATABASE_GENERATEDCODE_SOURCE})
	source_group("src\\ODBCImplementation" FILES ${IPDATABASE_ODBCIMPLEMENTATION_SOURCE})
endif(MSVC)

include_directories(${LOKI_INCLUDES_PATH} ${TBB_INCLUDES_PATH} ${CCGONLINE_ROOT}/IPCore/include ${CCGONLINE_ROOT}/IPShared/include ${CMAKE_CURRENT_SOURCE_DIR}/include ${CCGONLINE_ROOT}/pugixml/include)

if(PLATFORM_WINDOWS AND MSVC AND BUILD_SHARED_LIBS) 
    add_definitions("-DIPDATABASE_EXPORTS=1")
endif()

add_library(IPDatabase ${LIBTYPE} ${IPDATABASE_LIBRARY_SOURCE})
target_link_libraries(IPDatabase IPShared IPCore pugixml odbc32)

# todo: decide if install should set up binary directories or library form
install (TARGETS IPDatabase ARCHIVE DESTINATION ${ARCHIVE_DIRECTORY}/${PLATFORM_INSTALL_BINARY_PREFIX}/\${CMAKE_INSTALL_CONFIG_NAME}
                            LIBRARY DESTINATION lib/${PLATFORM_INSTALL_BINARY_PREFIX}/\${CMAKE_INSTALL_CONFIG_NAME}
				                RUNTIME DESTINATION bin/${PLATFORM_INSTALL_BINARY_PREFIX}/\${CMAKE_INSTALL_CONFIG_NAME})

install (FILES ${IPDATABASE_HEADERS} DESTINATION include/IPDatabase)
install (FILES ${IPDATABASE_GENERATEDCODE_HEADERS} DESTINATION include/IPDatabase/GeneratedCode)
install (FILES ${IPDATABASE_INTERFACES_HEADERS} DESTINATION include/IPDatabase/Interfaces)
install (FILES ${IPDATABASE_ODBCIMPLEMENTATION_HEADERS} DESTINATION include/IPDatabase/ODBCImplementation)





